--- a/sergey/index.htm
+++ b/sergey/index.htm
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<script>
+    document.cookie = "user=John";
+    console.log(     document.cookie )
+    document.setc
+</script>
 </head>
 <body>
     https://echoserver.online-it-school.com/
