--- a/masha/chat.html
+++ b/masha/chat.html
@@ -59,14 +59,9 @@
 <script>
 
     // Программа состоит из трех блоков, вынесенных в отдельные .js-файлы.
-
     // 1. Аутентификация пользователя (логин-пароль) - authefication.js
-
     // 2. Загрузка сообщений с сервера раз в 0,5 с - update_msg.js
-    // В этот раздел вроде бы не нужно вносить никаких изменений.
-
     // 3. Отправка нового сообщения - send_msg.js
-    // Теперь нужно отправлять токен вместе с сообщением, на новый api
 
     var user; // Объект, состоящий из токена и объекта, состоящего из имени и фамилии пользователя.
     var token; // Токен - это строка, передаваемая вместе с каждым сообщением пользователя.
@@ -94,7 +89,7 @@
         $("#b_send_get_msg").hide();
     };
 
-    // Убираем надпись Default name при попытке ввода другого имени
+    // Убираем надпись "Default name" при попытке ввода другого имени
     function empty()
     {
         // Обнуляем окно ввода имени.
