Chat with new api

--- a/masha/chat_copy.html
+++ b/masha/chat_copy.html
@@ -4,7 +4,7 @@
     <script src="js/jquery360.js"></script>
 
     <script src="js/authentification.js"></script>
-    <script src="js/update_msg_copy.js"></script> 
+    <script src="js/update_msg_2.js"></script> 
     <script src="js/send_msg.js"></script>  
 
     <link rel="stylesheet" href='css/my_style.css'>
